finishing up and creating the bootstrap and nav stuff

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,15 @@
  *= require_self
  *= require_tree .
  */
+
+body
+{
+  background-image:url('background.jpg');
+  background-color: #cccccc;
+  background-size: 100%
+}
+
+.container {
+  background-color: white; 
+  min-height: 300px; 
+}
