--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Bands: </h1>
 <ul>
  
   <% @bands.each do |band| %>
@@ -7,3 +8,4 @@
   <% end %>
 
 </ul>
+  <a class="btn btn-primary" href="bands/new">Create a band</a>
