--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Musicians: </h1>
 <ul>
  
   <% @musicians.each do |musician| %>
@@ -7,3 +8,4 @@
   <% end %>
 
 </ul>
+  <a class="btn btn-primary" href="musicians/new">Create a musician</a>
