got tests working

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -3,8 +3,7 @@
  
   <% @bands.each do |band| %>
   
-  <li><%= band.name %></li>
-
+  <li><a href="<%= edit_band_path(band) %>"><%= band.name %></a></li>
   <% end %>
 
 </ul>
